FIX: improve global spacing

--- a/server/main/static/main/css/index.css
+++ b/server/main/static/main/css/index.css
@@ -9,8 +9,9 @@ hr {
 }
 
 .navbar {
-    background-image: linear-gradient(to bottom, #000000 0, #A0BD2E 100%);
     /*height: 50px;*/
+    margin-bottom: 10px;  /* default is 20px */
+    background-image: linear-gradient(to bottom, #000000 0, #A0BD2E 100%);
 }
 
 @media (min-width: 1600px) {
@@ -21,7 +22,7 @@ hr {
 
 html,
 body {
-    height: 94%;
+    /*height: 94%;*/
     margin: 0
 }
 
@@ -112,14 +113,13 @@ div.panel div.panel-body-bottom {
 
 .content {
     /*margin-top: 60px;*/
-    margin-bottom: 10px;
+    /*margin-bottom: 10px;*/
     /*padding-top: 60px;*/
-    padding-bottom: 10px;
-    height: 94%;
+    /*padding-bottom: 10px;*/
+    height: calc(100vh - 50px - 10px - 5px - 30px - 1px);  /* 100% of the viewport height - height of header and footer */
 }
 
 .footer {
-    height: 25px;
 }
 
 .event {
